--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: ruby
+cache: bundler
+
 rvm:
   - 2.1.2
+
+script: 'bundle exec rake spec'
+
+notifications:
+    email:
+        recipients:
+        - my@email.com
+        on_failure: change
+        on_success: never
+
